some fix for ios7

--- a/Aier360/Controllers/我/Mine.storyboard
+++ b/Aier360/Controllers/我/Mine.storyboard
@@ -108,10 +108,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="8JC-gD-nFk" firstAttribute="top" secondItem="iQc-Ah-RSW" secondAttribute="bottom" id="3CL-uk-6zG"/>
-                            <constraint firstItem="iQc-Ah-RSW" firstAttribute="top" secondItem="Ydu-eT-hBe" secondAttribute="bottom" id="8VG-CK-0IK"/>
-                            <constraint firstItem="iQc-Ah-RSW" firstAttribute="leading" secondItem="UNb-Il-Icm" secondAttribute="leadingMargin" constant="-16" id="hWC-Tr-Xld"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="iQc-Ah-RSW" secondAttribute="trailing" constant="-16" id="y78-EF-Rv7"/>
+                            <constraint firstAttribute="trailing" secondItem="iQc-Ah-RSW" secondAttribute="trailing" id="2EM-2L-YcO"/>
+                            <constraint firstItem="iQc-Ah-RSW" firstAttribute="leading" secondItem="UNb-Il-Icm" secondAttribute="leading" id="Zo3-se-icr"/>
+                            <constraint firstItem="8JC-gD-nFk" firstAttribute="top" secondItem="iQc-Ah-RSW" secondAttribute="bottom" id="fRv-s7-VKM"/>
+                            <constraint firstItem="iQc-Ah-RSW" firstAttribute="top" secondItem="Ydu-eT-hBe" secondAttribute="bottom" id="fWM-aB-xGo"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="EsA-BF-a2v"/>
@@ -589,10 +589,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="fdH-KJ-IaV" secondAttribute="trailing" constant="-16" id="Xnu-xf-hiN"/>
-                            <constraint firstItem="blv-kO-cWq" firstAttribute="top" secondItem="fdH-KJ-IaV" secondAttribute="bottom" id="roP-K9-mqp"/>
-                            <constraint firstItem="fdH-KJ-IaV" firstAttribute="top" secondItem="zxp-64-jle" secondAttribute="topMargin" id="s0O-aj-gWg"/>
-                            <constraint firstItem="fdH-KJ-IaV" firstAttribute="leading" secondItem="zxp-64-jle" secondAttribute="leadingMargin" constant="-16" id="ypU-uf-Jtz"/>
+                            <constraint firstItem="fdH-KJ-IaV" firstAttribute="leading" secondItem="zxp-64-jle" secondAttribute="leading" id="AbS-Sm-UFo"/>
+                            <constraint firstAttribute="trailing" secondItem="fdH-KJ-IaV" secondAttribute="trailing" id="UEE-XN-GP6"/>
+                            <constraint firstItem="fdH-KJ-IaV" firstAttribute="top" secondItem="98e-wE-bMH" secondAttribute="bottom" id="bvP-w7-JLN"/>
+                            <constraint firstItem="blv-kO-cWq" firstAttribute="top" secondItem="fdH-KJ-IaV" secondAttribute="bottom" id="qeC-an-unP"/>
                         </constraints>
                     </view>
                     <connections>
@@ -625,10 +625,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="KkW-QD-Hrs" firstAttribute="top" secondItem="arW-C6-zM6" secondAttribute="bottom" id="AHQ-GE-PO5"/>
-                            <constraint firstItem="arW-C6-zM6" firstAttribute="leading" secondItem="RKE-3s-bJA" secondAttribute="leadingMargin" constant="-16" id="BQX-5J-nCk"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="arW-C6-zM6" secondAttribute="trailing" constant="-16" id="MtB-Gg-nB0"/>
-                            <constraint firstItem="arW-C6-zM6" firstAttribute="top" secondItem="RKE-3s-bJA" secondAttribute="topMargin" id="hox-7A-YPo"/>
+                            <constraint firstItem="arW-C6-zM6" firstAttribute="top" secondItem="RKE-3s-bJA" secondAttribute="top" id="Phw-bu-ykO"/>
+                            <constraint firstAttribute="trailing" secondItem="arW-C6-zM6" secondAttribute="trailing" id="mjq-Re-9Kd"/>
+                            <constraint firstItem="KkW-QD-Hrs" firstAttribute="top" secondItem="arW-C6-zM6" secondAttribute="bottom" id="uB4-8l-x1Q"/>
+                            <constraint firstItem="arW-C6-zM6" firstAttribute="leading" secondItem="RKE-3s-bJA" secondAttribute="leading" id="uNt-Y1-PMK"/>
                         </constraints>
                     </view>
                     <connections>
@@ -1166,10 +1166,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Nsa-Gc-EtV" firstAttribute="top" secondItem="YjZ-YS-QrG" secondAttribute="topMargin" id="5lu-hH-Svj"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Nsa-Gc-EtV" secondAttribute="trailing" constant="-16" id="QKO-bN-PlO"/>
-                            <constraint firstItem="0h1-fx-71S" firstAttribute="top" secondItem="Nsa-Gc-EtV" secondAttribute="bottom" id="adA-YV-DpE"/>
-                            <constraint firstItem="Nsa-Gc-EtV" firstAttribute="leading" secondItem="YjZ-YS-QrG" secondAttribute="leadingMargin" constant="-16" id="yYv-gx-sSK"/>
+                            <constraint firstItem="Nsa-Gc-EtV" firstAttribute="leading" secondItem="YjZ-YS-QrG" secondAttribute="leadingMargin" constant="-16" id="4ea-Q4-qKy"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Nsa-Gc-EtV" secondAttribute="trailing" constant="-16" id="f7b-T9-SpY"/>
+                            <constraint firstItem="0h1-fx-71S" firstAttribute="top" secondItem="Nsa-Gc-EtV" secondAttribute="bottom" id="gxO-w7-7GK"/>
+                            <constraint firstItem="Nsa-Gc-EtV" firstAttribute="top" secondItem="AdS-wm-sfs" secondAttribute="bottom" id="sUe-5N-diT"/>
                         </constraints>
                     </view>
                     <connections>
