--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -15,11 +15,11 @@
                         <viewControllerLayoutGuide type="bottom" id="oCP-HY-dGa"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="EIH-lB-Gok">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="64" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="XAf-Yb-N7s">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" id="Ugv-ip-lkf" customClass="ZXAnnouncementCell">
@@ -132,6 +132,7 @@
                             <constraint firstItem="XAf-Yb-N7s" firstAttribute="leading" secondItem="EIH-lB-Gok" secondAttribute="leadingMargin" constant="-16" id="JAW-LQ-qKK"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="k1I-Pe-t36"/>
                     <connections>
                         <outlet property="tableView" destination="XAf-Yb-N7s" id="1MV-fD-Fpg"/>
                         <segue destination="zvx-83-9ve" kind="show" identifier="add" id="Eaz-T7-h3V"/>
@@ -150,7 +151,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Wqs-DJ-8fi"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="c7c-wz-0pc">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VGX-af-ftm">
@@ -209,7 +210,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="64" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="h0p-pq-P4s">
-                                <rect key="frame" x="0.0" y="44" width="600" height="556"/>
+                                <rect key="frame" x="0.0" y="44" width="600" height="492"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="contentCell" textLabel="bRO-cv-6R5" detailTextLabel="Qbq-oZ-cw0" style="IBUITableViewCellStyleValue1" id="D1H-pg-Tec">
@@ -308,6 +309,7 @@
                             <constraint firstItem="h0p-pq-P4s" firstAttribute="leading" secondItem="c7c-wz-0pc" secondAttribute="leadingMargin" constant="-16" id="N8P-cJ-Hm7"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="2f6-Me-fFq"/>
                     <connections>
                         <outlet property="releasedButton" destination="cyw-bE-5HU" id="eX8-u9-02x"/>
                         <outlet property="tableView" destination="h0p-pq-P4s" id="BEd-73-T1f"/>
@@ -330,11 +332,11 @@
                         <viewControllerLayoutGuide type="bottom" id="Z2D-Fa-gTf"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Egm-UQ-SaA">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="102" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="2w2-aG-a8r">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="9XO-Zp-EFq">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="147"/>
@@ -573,11 +575,11 @@
                         <viewControllerLayoutGuide type="bottom" id="vVw-4T-YWB"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="PLi-DO-VH1">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="4b2-qU-yWy">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="RUj-kV-g14">
@@ -907,11 +909,11 @@
                         <viewControllerLayoutGuide type="bottom" id="kFY-BY-rLc"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ACI-62-wk1">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1j9-ZN-Tmw">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="mlq-sc-MSE">
                                     <rect key="frame" x="0.0" y="110" width="600" height="121"/>
@@ -1048,7 +1050,7 @@
                                 </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zNu-5x-cfn">
-                                <rect key="frame" x="0.0" y="600" width="600" height="206"/>
+                                <rect key="frame" x="0.0" y="536" width="600" height="206"/>
                                 <subviews>
                                     <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="61t-6m-7M5">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -1129,11 +1131,11 @@
                         <viewControllerLayoutGuide type="bottom" id="7qa-zs-QKN"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="O0I-oq-bzt">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="GHL-26-g0f">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="GBb-jD-gjG">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="150"/>
@@ -1335,6 +1337,48 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iOG-IL-p81" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1421" y="862"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="nJC-zd-aiP">
+            <objects>
+                <navigationController id="1ln-23-hk7" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="BD8-go-7Xf">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.1019607843" green="0.1176470588" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="XSN-n2-Hoc" kind="relationship" relationship="rootViewController" id="KTK-IT-wDn"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4nl-rf-IIW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="104" y="502"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="4hN-UK-xQO">
+            <objects>
+                <navigationController id="ct0-BR-hQc" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="67b-zx-HBc">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.1019607843" green="0.1176470588" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="PkO-zk-dnL" kind="relationship" relationship="rootViewController" id="ohI-pd-g5J"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2fU-Gt-tvX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="104" y="1605"/>
         </scene>
     </scenes>
     <resources>
