--- a/Aier360/Controllers/校园/点名统计+班级列表+教工列表/Teachers.storyboard
+++ b/Aier360/Controllers/校园/点名统计+班级列表+教工列表/Teachers.storyboard
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="q0h-2U-AR2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="q0h-2U-AR2">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -17,11 +15,11 @@
                         <viewControllerLayoutGuide type="bottom" id="bPS-UY-oAS"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="gPP-Po-jtp">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="9Ok-XH-yH9">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" textLabel="KGE-ok-wrK" detailTextLabel="ltk-xz-mob" style="IBUITableViewCellStyleValue1" id="llU-Z9-SAd">
@@ -63,6 +61,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="9Ok-XH-yH9" secondAttribute="trailing" constant="-16" id="yGZ-6G-FFE"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="0h4-cH-bLF"/>
                     <connections>
                         <outlet property="tableView" destination="9Ok-XH-yH9" id="iw5-Do-2sn"/>
                         <segue destination="hE9-kn-lLF" kind="show" identifier="check" id="6bR-vm-W6x"/>
@@ -81,11 +80,11 @@
                         <viewControllerLayoutGuide type="bottom" id="zs7-RM-UIb"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="qQ7-8K-pTx">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="jiq-du-oWX">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="COc-Kr-Wza">
@@ -113,6 +112,7 @@
                             <constraint firstItem="jiq-du-oWX" firstAttribute="top" secondItem="qQ7-8K-pTx" secondAttribute="topMargin" id="ejz-mU-ISN"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="DPs-Ez-ydH"/>
                     <connections>
                         <outlet property="tableView" destination="jiq-du-oWX" id="PsA-H9-DAm"/>
                     </connections>
@@ -130,11 +130,11 @@
                         <viewControllerLayoutGuide type="bottom" id="oG2-Wn-yw0"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="uAd-Yw-uIG">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Ruk-Vg-XUD">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="4Ja-nK-vjV">
@@ -176,11 +176,11 @@
                         <viewControllerLayoutGuide type="bottom" id="eur-Z8-Md0"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="qA5-tA-VKk">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="64" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Gra-0b-Z1A">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="Rmo-5U-fwM" customClass="ZXCheckCell">
@@ -286,7 +286,7 @@
                         <viewControllerLayoutGuide type="bottom" id="k9f-sO-Dcq"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="esg-gT-hQG">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lwd-WO-TPA">
@@ -351,6 +351,9 @@
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xcp-C7-dNm">
                                         <rect key="frame" x="108" y="107" width="484" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="LwR-Vw-rDo"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.51764705879999995" green="0.51764705879999995" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -367,6 +370,9 @@
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KBT-tG-Hg9">
                                         <rect key="frame" x="108" y="136" width="484" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="hOU-3N-kfb"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.51764705879999995" green="0.51764705879999995" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -398,7 +404,6 @@
                                     <constraint firstItem="94y-N1-cix" firstAttribute="top" secondItem="lwd-WO-TPA" secondAttribute="top" constant="20" id="Pdm-8T-zVD"/>
                                     <constraint firstItem="xcp-C7-dNm" firstAttribute="leading" secondItem="Bg6-QE-N1d" secondAttribute="trailing" constant="8" id="Rhe-8b-yki"/>
                                     <constraint firstItem="KBT-tG-Hg9" firstAttribute="top" secondItem="xcp-C7-dNm" secondAttribute="bottom" constant="8" symbolic="YES" id="U8c-lD-0Kf"/>
-                                    <constraint firstItem="KBT-tG-Hg9" firstAttribute="firstBaseline" secondItem="yWy-Z4-pdS" secondAttribute="baseline" id="eoy-jl-S89"/>
                                     <constraint firstItem="zHW-9R-ZPx" firstAttribute="leading" secondItem="Gav-fk-vWm" secondAttribute="trailing" constant="8" id="iaH-AT-U9S"/>
                                     <constraint firstAttribute="trailing" secondItem="xcp-C7-dNm" secondAttribute="trailing" constant="25" id="ibt-MQ-VBk"/>
                                     <constraint firstItem="mGP-aV-u1n" firstAttribute="top" secondItem="lwd-WO-TPA" secondAttribute="top" constant="20" id="mFb-yw-Ged"/>
@@ -411,7 +416,6 @@
                                     <constraint firstItem="Gav-fk-vWm" firstAttribute="leading" secondItem="lwd-WO-TPA" secondAttribute="leading" constant="15" id="t2Y-VT-Ynw"/>
                                     <constraint firstItem="yWy-Z4-pdS" firstAttribute="leading" secondItem="lwd-WO-TPA" secondAttribute="leading" constant="15" id="wvs-mW-aau"/>
                                     <constraint firstAttribute="trailing" secondItem="94y-N1-cix" secondAttribute="trailing" constant="25" id="xCT-6i-1nW"/>
-                                    <constraint firstItem="KBT-tG-Hg9" firstAttribute="baseline" secondItem="yWy-Z4-pdS" secondAttribute="baseline" id="z2F-6u-SJR"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -433,6 +437,48 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hXy-aD-UX9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1018" y="1654"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="kDv-YI-0nE">
+            <objects>
+                <navigationController id="8Uj-l9-k8f" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="vA2-pl-Fz4">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.1019607843" green="0.1176470588" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="q0h-2U-AR2" kind="relationship" relationship="rootViewController" id="jh6-al-ijN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WcU-FA-4eE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-332" y="654"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="imJ-Rj-U3Q">
+            <objects>
+                <navigationController id="KMY-jY-XHE" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="fxx-ry-YCM">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.1019607843" green="0.1176470588" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="B0P-Jk-DEY" kind="relationship" relationship="rootViewController" id="R5n-6Z-iHi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RJE-BH-CAi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-332" y="1654"/>
         </scene>
     </scenes>
     <resources>
